Bug 424661 - Accept albumart.{jpg|png} as album cover
Summary: Accept albumart.{jpg|png} as album cover
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (show other bugs)
Version: 20.04.2
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-25 17:46 UTC by ondra2spse
Modified: 2020-11-11 14:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 20.12


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ondra2spse 2020-07-25 17:46:25 UTC
SUMMARY
Fetching the album cover from album directory works with "folder.jpg", however another common naming convention is "albumart.{image extension}", for instance "albumart.jpg". This does not work in Elisa 20.04.2, fetched from Neon repository.


STEPS TO REPRODUCE
1. have a folder with properly tagged audio files and an image file named "albumart.jpg"
2. get it indexed by Elisa
3. open the album in Elisa

OBSERVED RESULT
no image found, displayed default "CD".

EXPECTED RESULT
the image from album's folder should be shown.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.19
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Just discovered Elisa, really like it ;)
Comment 1 Nate Graham 2020-11-11 01:47:35 UTC
Confirmed. It works if the image is named "cover.jpg" but not "albumart.jpg".
Comment 2 Bug Janitor Service 2020-11-11 01:53:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/181
Comment 3 Nate Graham 2020-11-11 14:13:07 UTC
Git commit 3e052f5ac518a674f1c1e983f81478ce1d7a8c65 by Nate Graham.
Committed on 11/11/2020 at 14:12.
Pushed by ngraham into branch 'release/20.12'.

Accept files named "albumart.jpg" for album art
FIXED-IN: 20.12

M  +3    -1    src/filescanner.cpp

https://invent.kde.org/multimedia/elisa/commit/3e052f5ac518a674f1c1e983f81478ce1d7a8c65