Accept files named "albumart.jpg" for album art

BUG: 424661
FIXED-IN: 20.12