src/filescanner.cpp
@@ -74,7 +74,9 @@ public:
         QStringLiteral("*[Ff]older*.jpg"),
         QStringLiteral("*[Ff]older*.png"),
         QStringLiteral("*[Ff]ront*.jpg"),
-        QStringLiteral("*[Ff]ront*.png")
+        QStringLiteral("*[Ff]ront*.png"),
+        QStringLiteral("*[Aa]lbumart*.jpg"),
+        QStringLiteral("*[Aa]lbumart*.png")
     };
 };
 
